certs in secrets should be data

--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -34,7 +34,7 @@ kind: Secret
 metadata:
   name: {{ include "secrets.fullname" . }}-harvester-certs
 type: Opaque
-stringData:
+data:
   {{- range $path, $_ := .Files.Glob "files/harvester_certs/**.pem" }}
   {{ base $path }}: |-
     {{ $.Files.Get $path | b64enc }}
