--- a/secrets/templates/idds.yaml
+++ b/secrets/templates/idds.yaml
@@ -77,7 +77,7 @@ kind: Secret
 metadata:
   name: {{ include "secrets.fullname" . }}-idds-certs
 type: Opaque
-stringData:
+data:
   {{- range $path, $_ := .Files.Glob "files/idds_certs/**.pem" }}
   {{ base $path }}: |-
     {{ $.Files.Get $path | b64enc }}
