--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -58,7 +58,7 @@ kind: Secret
 metadata:
   name: {{ include "secrets.fullname" . }}-panda-auth
 type: Opaque
-stringData:
+data:
   {{- range $client := .Values.auth.oidc.clients }}
   {{ $client.name }}_auth_config.json: |-
     {{ $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ID" $client.client_id | replace "SECRET" $client.client_secret | replace "URL" $.Values.auth.oidc.config_url | replace "AUDIENCE" $.Values.auth.oidc.audience  | replace "VO" $client.name }}
