--- a/helm/panda/values/values-sphenix.yaml
+++ b/helm/panda/values/values-sphenix.yaml
@@ -14,6 +14,15 @@ server:
     create: false
     selector: false
 
+  route:
+    enabled: true
+
+  httpsProxy: "http://proxy.sdcc.bnl.local:3128"
+  httpProxy: "http://proxy.sdcc.bnl.local:3128"
+  noRoot: true
+  hostName: "sphenix-pandaserver.apps.rcf.bnl.gov"
+
+
 postgres:
   persistentvolume:
     class: nas
