--- a/secrets/files/panda_auths/auth_config.json.template
+++ b/secrets/files/panda_auths/auth_config.json.template
@@ -1,1 +1,1 @@
-{"client_secret": "SECRET", "audience": "AUDIENCE", "client_id": "ID", "oidc_config_url": "CONF", "vo": "NAME"}
+{"client_secret": "SECRET", "audience": "AUDIENCE", "client_id": "ID", "oidc_config_url": "URL", "vo": "NAME"}
