--- a/secrets/templates/idds.yaml
+++ b/secrets/templates/idds.yaml
@@ -50,6 +50,7 @@ stringData:
 
   IDDS_SERVER: "https://{{ include "idds_ref" . }}:{{ .Values.idds.restPort  }}"
 
+  {{ template "set_proxy" . }}
 
 ---
 apiVersion: v1
