--- a/helm/idds/values/values-sphenix.yaml
+++ b/helm/idds/values/values-sphenix.yaml
@@ -8,14 +8,24 @@ daemon:
     class: nas
     create: false
 
+  httpsProxy: "http://proxy.sdcc.bnl.local:3128"
+  httpProxy: "http://proxy.sdcc.bnl.local:3128"
+  noRoot: true
+
+
 rest:
 
   persistentvolume:
     class: nas
     create: false
 
+  noRoot: true
+  
+
 postgres:
 
   persistentvolume:
     class: nas
     create: false
+
+  noRoot: true
