--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -38,6 +38,9 @@ stringData:
   PANDA_RUCIO_PASSWORD: "{{ .Values.rucio.password }}"
   PANDA_RUCIO_ACCOUNT: "{{ .Values.rucio.account }}"
 
+  # proxy
+  {{ template "set_proxy" . }}
+
 ---
 # certs
 apiVersion: v1
