--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -39,7 +39,7 @@ stringData:
   PANDA_RUCIO_ACCOUNT: "{{ .Values.rucio.account }}"
 
   # proxy
-  {{ template "set_proxy" . }}
+  {{ template "set_proxy" . | indent 2 }}
 
 ---
 # certs
