--- a/secrets/templates/idds.yaml
+++ b/secrets/templates/idds.yaml
@@ -50,7 +50,7 @@ stringData:
 
   IDDS_SERVER: "https://{{ include "idds_ref" . }}:{{ .Values.idds.restPort  }}"
 
-  {{ template "set_proxy" . }}
+  {{ template "set_proxy" . | indent 2 }}
 
 ---
 apiVersion: v1
