--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -27,7 +27,7 @@ stringData:
   CONDOR_CHANNEL: ".stable"
   {{- end }}
 
-  {{ template "set_proxy" . | indent 2 }}
+  {{ include "set_proxy" . | indent 2 }}
 
 ---
 # certs
