--- a/helm/bigmon/values-lsst.yaml
+++ b/helm/bigmon/values-lsst.yaml
@@ -8,3 +8,15 @@ main:
     class: wekafs--sdf-k8s01
     create: false
 
+  ingress:
+    enabled: true
+    hosts:
+      - domain: slac.stanford.edu
+        # hostOverride: panda-k8s-dev-jedi.cern.ch
+        paths:
+          - path: /
+            pathType: Prefix
+    tls:
+      - secretName: ""
+        hosts:
+          - domain: slac.stanford.edu
