--- a/helm/panda/charts/server/values.yaml
+++ b/helm/panda/charts/server/values.yaml
@@ -67,8 +67,32 @@ ingress:
   className: ""
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/secure-backends: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: 'true'
+    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'optional_no_ca'
+    nginx.ingress.kubernetes.io/auth-tls-verify-depth: '10'
+
+    nginx.ingress.kubernetes.io/configuration-snippet: |-
+      proxy_set_header PANDA-OIDC-VO  $http_panda_oidc_vo;
+      proxy_set_header PANDA-OIDC-GROUP $http_panda_oidc_group;
+      proxy_set_header PANDA-OIDC-ROLE $http_panda_oidc_role;
+      add_header PANDA-OIDC-VO  $http_panda_oidc_vo;
+      add_header PANDA-OIDC-GROUP $http_panda_oidc_group;
+      add_header PANDA-OIDC-ROLE $http_panda_oidc_role;
+
+      proxy_set_header SSL-CLIENT-CERT $ssl_client_escaped_cert;
+      proxy_set_header SSL-CLIENT-S-DN  $ssl_client_s_dn;
+      add_header SSL-CLIENT-CERT $ssl_client_escaped_cert;
+      add_header SSL-CLIENT-S-DN $ssl_client_s_dn;
+    nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "true"
+    nginx.ingress.kubernetes.io/server-snippet: |
+       ssl on;
+       ssl_verify_client optional_no_ca;
+       ssl_verify_depth 10;
+
   hosts:
     - domain: cern.ch
       hostOverride: ""
