--- a/kustomization/idds.yaml
+++ b/kustomization/idds.yaml
@@ -407,10 +407,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/auth-proxy-set-headers: X-IDDS-Auth-Type,X-IDDS-Auth-VO,X-IDDS-Auth-Token
     nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
-    nginx.ingress.kubernetes.io/auth-tls-secret: default/ca-secret-wguan
-    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional
+    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional_no_ca
     nginx.ingress.kubernetes.io/auth-tls-verify-depth: "10"
     nginx.ingress.kubernetes.io/backend-protocol: HTTPS
     nginx.ingress.kubernetes.io/configuration-snippet: |-
@@ -420,19 +418,25 @@ metadata:
       add_header X-IDDS-Auth-Type $http_x_idds_auth_type;
       add_header X-IDDS-Auth-VO $http_x_idds_auth_vo;
       add_header X-IDDS-Auth-Token $http_x_idds_auth_token;
+    
+      proxy_set_header SSL-CLIENT-CERT $ssl_client_escaped_cert;
+      proxy_set_header SSL-CLIENT-S-DN  $ssl_client_s_dn;
+      add_header SSL-CLIENT-CERT $ssl_client_escaped_cert;
+      add_header SSL-CLIENT-S-DN $ssl_client_s_dn;
+    
       # proxy_set_header X-SSL-CERT $ssl_client_escaped_cert;
-    nginx.ingress.kubernetes.io/proxy-pass-headers: X-IDDS-Auth-Type,X-IDDS-Auth-VO,X-IDDS-Auth-Token
     nginx.ingress.kubernetes.io/secure-backends: "true"
     nginx.ingress.kubernetes.io/server-snippet: |
       ssl on;
+      ssl_verify_client optional_no_ca;
+      ssl_verify_depth 10;
+    
       # ssl_protocols TLSv1.1 TLSv1.2;
       # ssl_trusted_certificate /etc/ingress-controller/ssl/ca-default-ca-secret-bundle.pem;
       # ssl_ciphers HIGH:!aNULL:!MD5;
       # ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    nginx.org/proxy-pass-headers: X-IDDS-Auth-Type,X-IDDS-Auth-VO,X-IDDS-Auth-Token
 spec:
   tls:
     - hosts:
