--- a/helm/iam/charts/main/values.yaml
+++ b/helm/iam/charts/main/values.yaml
@@ -79,36 +79,18 @@ ingress:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/secure-backends: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: 'true'
+    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'optional_no_ca'
+    nginx.ingress.kubernetes.io/auth-tls-verify-depth: '10'
 
     nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "on"
     nginx.ingress.kubernetes.io/server-snippet: |
-        ssl on;
-        ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers               ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:!DSS;
+      ssl on;
+      ssl_verify_client optional_no_ca;
+      ssl_verify_depth 10;
 
-    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'off'
-    nginx.ingress.kubernetes.io/auth-tls-secret: "default/ca-secret"
-    nginx.ingress.kubernetes.io/configuration-snippet: |-
-          # proxy_set_header Host $host;
-          # proxy_set_header X-Real-IP $remote_addr;
-          # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          # proxy_set_header X-Forwarded-Proto $scheme;
-          # proxy_set_header X-Real-IP       $remote_addr;
-          # proxy_pass              http://panda-iam-doma-main.cern.ch:8080;
-          proxy_set_header        X-SSL-Client-Cert $ssl_client_cert;
-          proxy_set_header        X-SSL-Client-I-Dn $ssl_client_i_dn;
-          proxy_set_header        X-SSL-Client-S-Dn $ssl_client_s_dn;
-          proxy_set_header        X-SSL-Client-Serial $ssl_client_serial;
-          proxy_set_header        X-SSL-Client-V-Start $ssl_client_v_start;
-          proxy_set_header        X-SSL-Client-V-End   $ssl_client_v_end;
-          proxy_set_header        X-SSL-Client-Verify  $ssl_client_verify;
-          proxy_set_header        X-SSL-Protocol $ssl_protocol;
-          proxy_set_header        X-SSL-Server-Name $ssl_server_name;
-          # proxy_redirect http://panda-iam-dev.cern.ch https://panda-iam-dev.cern.ch;
-
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hosts:
     - domain: cern.ch
       hostOverride: ""
