--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -54,6 +54,9 @@ panda:
     password: "FIXME"
     # set only when  using an external database
     dbhost: ""
+    port: "5432"
+    name: "panda"
+    user: "panda_db"
 
   # PanDA server ports
   port: "80"
@@ -98,6 +101,27 @@ idds:
 bigmon:
   enabled: true
 
+  hostname: "FIXME"
+  numWSGI: "10"
+  vo: "FIXME"
+  secretKey: "FIXME"
+  deployment: "POSTGRES"
+  debugMode: true
+
+  auth:
+    providers:
+      Google:
+        key: "FIXME"
+        secret: "FIXME"
+      CERN:
+        key: "FIXME"
+        secret: "FIXME"
+      AWS:
+        key: "FIXME"
+        secret: "FIXME"
+      github:
+        key: "FIXME"
+        secret: "FIXME"
 
 iam:
   enabled: true
