--- a/secrets/templates/iam.yaml
+++ b/secrets/templates/iam.yaml
@@ -46,8 +46,8 @@ stringData:
   IAM_LOGO_WIDTH: "200"
   IAM_REGISTRATION_OIDC_ISSUER: "https://cilogon.org"
 
-  IAM_BASE_URL: "https://panda-iam-dev.cern.ch"
-  IAM_ISSUER: "https://panda-iam-dev.cern.ch"
+  IAM_BASE_URL: "{{ .Values.iam.base_url}}"
+  IAM_ISSUER: "{{ .Values.iam.base_url}}"
   IAM_USE_FORWARDED_HEADERS: "true"
   IAM_KEY_STORE_LOCATION: "file:///indigo-iam/config//iam-keystore.jwks"
 
