--- a/helm/iam/charts/main/values.yaml
+++ b/helm/iam/charts/main/values.yaml
@@ -77,15 +77,14 @@ ingress:
   className: ""
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/secure-backends: "true"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: 'true'
+    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    # nginx.ingress.kubernetes.io/secure-backends: "true"
+    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    # nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: 'true'
     nginx.ingress.kubernetes.io/auth-tls-verify-client: 'optional_no_ca'
     nginx.ingress.kubernetes.io/auth-tls-verify-depth: '10'
 
-    nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "on"
     nginx.ingress.kubernetes.io/server-snippet: |
       ssl on;
       ssl_verify_client optional_no_ca;
