--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -124,6 +124,10 @@ bigmon:
 iam:
   enabled: true
 
+  profiles: "prod,registration,oidc"
+
+  base_url: "FIXME"
+
   database:
     # affix will be used to fill host if it's empty.
     # host: "iam-dev-mariadb"
