Extended the prototype implentation with extras keys

--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -27,9 +27,11 @@ stringData:
   # Auth
   BIGMON_AUTH_PROVIDER_LIST: {{ join "," $auth_providers | quote}}
   {{- range $provider, $value := .Values.bigmon.auth.providers}}
-  SOCIAL_AUTH_KEY_{{upper $provider}}: {{$value.key}}
-  SOCIAL_AUTH_SECRET_{{upper $provider}}: {{$value.secret}}
+  SOCIAL_AUTH_{{upper $provider}}_KEY: {{$value.key}}
+  SOCIAL_AUTH_{{upper $provider}}_SECRET: {{$value.secret}}
   {{- end }}
+  SOCIAL_AUTH_INDIGOIAMOIDC_BASEPATH:  "{{ .Values.auth.indigoiam.basePath }}"
+
 
   # PandaDB
   PANDA_DB_NAME: "{{ .Values.panda.database.name }}"
@@ -53,6 +55,13 @@ stringData:
   RUCIO_ACCOUNT: "{{ .Values.rucio.account }}"
   RUCIO_USERNAME: "{{ .Values.rucio.username }}"
   RUCIO_PASSWORD: "{{ .Values.rucio.password }}"
+
+  # CRIC
+  CRIC_API_URL: "{{ .Values.cric.apiUrl }}"
+
+  # AWS
+  AWS_ACCESS_KEY_ATLAS: "{{ .Values.aws.accessKey }}"
+  AWS_SECRET_KEY_ATLAS: "{{ .Values.aws.secretKey }}"
 
   {{ include "set_proxy" . | indent 2 }}
 
