--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -37,7 +37,7 @@ metadata:
   name: {{ include "secrets.fullname" . }}-harvester-certs
 type: Opaque
 data:
-  {{- range $path, $_ := .Files.Glob "files/harvester_certs/**.pem" }}
+  {{- range $path, $_ := .Files.Glob "files/harvester_certs/*" }}
   {{ base $path }}: |-
     {{ $.Files.Get $path | b64enc }}
   {{- end }}
