--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.panda.enabled }}
+{{- if .Values.bigmon.enabled }}
 
 {{- $auth_providers := list -}}
 {{- range $provider, $value := .Values.bigmon.auth.providers -}}
@@ -17,7 +17,7 @@ stringData:
   BIGMON_NUM_WSGI_PROC: "{{ .Values.bigmon.numWSGI }}"
   BIGMON_SECRET_KEY: "{{ .Values.bigmon.secretKey }}"
   BIGMON_VO: "{{ .Values.bigmon.vo }}"
-  BIGMON_DEPLOYMENT: "{{ .Values.bigmon.deployment }}"
+  BIGMON_DEPLOYMENT: "POSTGRES"
   {{- if .Values.bigmon.debugMode }}
   BIGMON_DEBUG: "True"
   {{- else }}
@@ -34,10 +34,10 @@ stringData:
 
 
   # PandaDB
-  PANDA_DB_NAME: "{{ .Values.panda.database.name }}"
+  PANDA_DB_NAME: "{{ .Values.panda.database.name | default panda_db }}"
   PANDA_DB_HOST: "{{ .Values.panda.database.dbhost | default (printf "%s-postgres" (include "panda_ref" .)) }}"
-  PANDA_DB_PORT: "{{ .Values.panda.database.port }}"
-  PANDA_DB_USER: "{{ .Values.panda.database.user }}"
+  PANDA_DB_PORT: "5432"
+  PANDA_DB_USER: "{{ .Values.panda.database.user | default panda }}"
   PANDA_DB_PASSWORD: {{ .Values.panda.database.password }}
   
   # iDDS
