--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -54,9 +54,8 @@ panda:
     password: "FIXME"
     # set only when  using an external database
     dbhost: ""
-    port: "5432"
-    name: "panda"
-    user: "panda_db"
+    name: ""
+    user: ""
 
   # PanDA server ports
   port: "80"
@@ -105,8 +104,7 @@ bigmon:
   numWSGI: "10"
   vo: "FIXME"
   secretKey: "FIXME"
-  deployment: "POSTGRES"
-  debugMode: true
+  debugMode: false
 
   auth:
     providers:
