--- a/secrets/templates/iam.yaml
+++ b/secrets/templates/iam.yaml
@@ -8,7 +8,7 @@ type: Opaque
 stringData:
   MARIADB_USER: {{ .Values.iam.database.user }}
   MARIADB_PASSWORD: {{ .Values.iam.database.password }}
-  MARIADB_ROOT_PASSWORD: {{ .Values.iam.database.admin_password }}
+  MARIADB_ROOT_PASSWORD: {{ .Values.iam.database.password }}_admin
 
 ---
 # iam envs
