--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -54,8 +54,8 @@ panda:
     password: "FIXME"
     # set only when  using an external database
     dbhost: ""
-    name: ""
-    user: ""
+    name: "panda_db"
+    user: "panda"
 
   # PanDA server ports
   port: "80"
@@ -75,7 +75,7 @@ harvester:
   harvesterID: "my-harvester"
 
   database:
-    password: FIXME
+    password: "FIXME"
     # set only when using an external database
     dbhost: ""
 
@@ -91,7 +91,7 @@ idds:
   database:
     name: "idds_db"
     user: "idds"
-    password: "MyPass123"
+    password: "FIXME"
     schema: "doma_idds"
     # set only when using an external database
     host: ""
@@ -130,8 +130,7 @@ iam:
     host: ""
     name: "iam_db"
     user: "iam"
-    password: "MyPass0508"
-    admin_password: "MyAdminPass0508"
+    password: "FIXME"
 
   cilogon:
     client_id: "FIXME"
