--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -34,10 +34,10 @@ stringData:
 
 
   # PandaDB
-  PANDA_DB_NAME: "{{ .Values.panda.database.name | default panda_db }}"
+  PANDA_DB_NAME: "{{ .Values.panda.database.name }}"
   PANDA_DB_HOST: "{{ .Values.panda.database.dbhost | default (printf "%s-postgres" (include "panda_ref" .)) }}"
   PANDA_DB_PORT: "5432"
-  PANDA_DB_USER: "{{ .Values.panda.database.user | default panda }}"
+  PANDA_DB_USER: "{{ .Values.panda.database.user }}"
   PANDA_DB_PASSWORD: {{ .Values.panda.database.password }}
   
   # iDDS
