--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -30,7 +30,7 @@ stringData:
   SOCIAL_AUTH_{{upper $provider}}_KEY: {{$value.key}}
   SOCIAL_AUTH_{{upper $provider}}_SECRET: {{$value.secret}}
   {{- end }}
-  SOCIAL_AUTH_INDIGOIAMOIDC_BASEPATH:  "{{ .Values.auth.providers.indigoiam.basePath }}"
+  SOCIAL_AUTH_INDIGOIAMOIDC_BASEPATH:  "{{ .Values.bigmon.auth.providers.indigoiam.basePath }}"
 
 
   # PandaDB
