--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -145,6 +145,10 @@ rucio:
   account: "iddsv1"
 
 
+cric:
+  apiUrl: "https://datalake-cric.cern.ch/api/atlas/pandaqueue/query/?json"
+
+
 proxy:
   httpProxy: ""
   httpsProxy: ""
