--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -60,8 +60,10 @@ stringData:
   CRIC_API_URL: "{{ .Values.cric.apiUrl }}"
 
   # AWS
+  {{- if.Values.aws.accessKey }}
   AWS_ACCESS_KEY_ATLAS: "{{ .Values.aws.accessKey }}"
   AWS_SECRET_KEY_ATLAS: "{{ .Values.aws.secretKey }}"
+  {{- end }}
 
   {{ include "set_proxy" . | indent 2 }}
 
