--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -60,7 +60,7 @@ stringData:
   CRIC_API_URL: "{{ .Values.cric.apiUrl }}"
 
   # AWS
-  {{- if.Values.aws.accessKey }}
+  {{- if hasKey .Values "aws" }}
   AWS_ACCESS_KEY_ATLAS: "{{ .Values.aws.accessKey }}"
   AWS_SECRET_KEY_ATLAS: "{{ .Values.aws.secretKey }}"
   {{- end }}
