--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -27,8 +27,13 @@ stringData:
   # Auth
   BIGMON_AUTH_PROVIDER_LIST: {{ join "," $auth_providers | quote}}
   {{- range $provider, $value := .Values.bigmon.auth.providers}}
+  {{- if hasKey $value "moduleName" }}
+  SOCIAL_AUTH_{{ $value.moduleName }}_KEY: {{$value.key}}
+  SOCIAL_AUTH_{{ $value.moduleName }}_SECRET: {{$value.secret}}
+  {{- else }}
   SOCIAL_AUTH_{{upper $provider}}_KEY: {{$value.key}}
   SOCIAL_AUTH_{{upper $provider}}_SECRET: {{$value.secret}}
+  {{- end }}
   {{- end }}
   SOCIAL_AUTH_INDIGOIAMOIDC_BASEPATH:  "{{ .Values.bigmon.auth.providers.indigoiam.basePath }}"
 
