--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -26,16 +26,17 @@ stringData:
 
   # Auth
   BIGMON_AUTH_PROVIDER_LIST: {{ join "," $auth_providers | quote}}
-  {{- range $provider, $value := .Values.bigmon.auth.providers}}
-  {{- if hasKey $value "moduleName" }}
-  SOCIAL_AUTH_{{ $value.moduleName }}_KEY: {{$value.key}}
-  SOCIAL_AUTH_{{ $value.moduleName }}_SECRET: {{$value.secret}}
+  {{- range $provider, $v := .Values.bigmon.auth.providers }}
+  {{- if hasKey $v "moduleName" }}
+  {{- range $kk, $vv := $v }}
+  SOCIAL_AUTH_{{ $v.moduleName }}_{{ upper $kk }}: {{ $vv }}
+  {{- end }}
   {{- else }}
-  SOCIAL_AUTH_{{upper $provider}}_KEY: {{$value.key}}
-  SOCIAL_AUTH_{{upper $provider}}_SECRET: {{$value.secret}}
+  {{- range $kk, $vv := $v }}
+  SOCIAL_AUTH_{{ upper $provider }}_{{ upper $kk }}: {{ $vv }}
   {{- end }}
   {{- end }}
-  SOCIAL_AUTH_INDIGOIAMOIDC_BASEPATH:  "{{ .Values.bigmon.auth.providers.indigoiam.basePath }}"
+  {{- end }}
 
 
   # PandaDB
