--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -17,7 +17,7 @@ stringData:
   BIGMON_NUM_WSGI_PROC: "{{ .Values.bigmon.numWSGI }}"
   BIGMON_SECRET_KEY: "{{ .Values.bigmon.secretKey }}"
   BIGMON_VO: "{{ .Values.bigmon.vo }}"
-  BIGMON_DEPLOYMENT: "{{ .Values.bigmon.deployment | default POSTGRES }}"
+  BIGMON_DEPLOYMENT: "{{ .Values.bigmon.deployment | default "POSTGRES" }}"
   {{- if .Values.bigmon.debugMode }}
   BIGMON_DEBUG: "True"
   {{- else }}
@@ -36,7 +36,7 @@ stringData:
   # PandaDB
   PANDA_DB_NAME: "{{ .Values.panda.database.name }}"
   PANDA_DB_HOST: "{{ .Values.panda.database.dbhost | default (printf "%s-postgres" (include "panda_ref" .)) }}"
-  PANDA_DB_PORT: "{{ .Values.panda.database.port | default 5432 }}"
+  PANDA_DB_PORT: "{{ .Values.panda.database.port | default "5432" }}"
   PANDA_DB_USER: "{{ .Values.panda.database.user }}"
   PANDA_DB_PASSWORD: {{ .Values.panda.database.password }}
   
