httpd in harvester

--- a/helm/harvester/charts/harvester/templates/deployment.yaml
+++ b/helm/harvester/charts/harvester/templates/deployment.yaml
@@ -97,6 +97,10 @@ spec:
               {{- end }}
               sleep infinity & wait
           {{- end }}
+          ports:
+            - name: http
+              containerPort: 8080
+              protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
