--- a/helm/harvester/charts/harvester/templates/route.yaml
+++ b/helm/harvester/charts/harvester/templates/route.yaml
@@ -8,7 +8,7 @@ metadata:
       {{- include "harvester.labels" . | nindent 4 }}
 
 spec:
-  host: {{ .Values.hostName }}
+  host: {{ .Values.route.hostName }}
   to:
     kind: Service
     name: {{ include "harvester.fullname" . }}
