--- a/helm/panda/charts/server/templates/route.yaml
+++ b/helm/panda/charts/server/templates/route.yaml
@@ -18,4 +18,20 @@ spec:
   tls:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+---
+# for HTTP
+apiVersion: route.openshift.io/v1
+kind: Route
+metadata:
+  name: http-{{ include "server.fullname" . }}-route
+  labels:
+      {{- include "server.labels" . | nindent 4 }}
+
+spec:
+  host: http-{{ .Values.hostName }}
+  to:
+    kind: Service
+    name: {{ include "server.fullname" . }}
+  port:
+    targetPort: http
 {{ end }}
