--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -42,4 +42,17 @@ data:
     {{ $.Files.Get $path | b64enc }}
   {{- end }}
 
+---
+# auth files, for example for google cloud
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "secrets.fullname" . }}-harvester-auth
+type: Opaque
+data:
+  {{- range $path, $_ := .Files.Glob "files/harvester_auth/*" }}
+  {{ base $path }}: |-
+    {{ $.Files.Get $path | b64enc }}
+  {{- end }}
+
 {{- end }}
