--- a/helm/idds/charts/rest/templates/deployment.yaml
+++ b/helm/idds/charts/rest/templates/deployment.yaml
@@ -75,7 +75,7 @@ spec:
           {{ if .Values.autoStart -}}
           command: ["/bin/sh", "-c"]
           args:
-            - sleep 30;
+            - until /usr/pgsql-*/bin/pg_isready -h ${IDDS_DATABASE_HOST} -p 5432; do echo waiting for database; sleep 2; done;
               {{- if .Values.noRoot }}
               /opt/idds/bin/start-daemon.sh rest
               {{- else }}
