--- a/secrets/templates/iam.yaml
+++ b/secrets/templates/iam.yaml
@@ -82,4 +82,16 @@ stringData:
     {{ $.Files.Get $path | nindent 4}}
   {{- end }}
 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "secrets.fullname" . }}-iam-certs
+type: Opaque
+data:
+  {{- range $path, $_ := .Files.Glob "files/iam_certs/*" }}
+  {{ base $path }}: |-
+    {{ $.Files.Get $path | b64enc }}
+  {{- end }}
+
 {{- end }}
