--- a/secrets/templates/idds.yaml
+++ b/secrets/templates/idds.yaml
@@ -48,6 +48,12 @@ stringData:
   IDDS_CONDUCTOR_USERNAME: "idds"
   IDDS_CONDUCTOR_PASSWORD: "{{.Values.msgsvc.basePasswd}}_idds"
 
+  IDDS_RECEIVER_BROKERS: "{{ include "msgsvc_ref" . }}-activemq:61613"
+  IDDS_RECEIVER_PORT: "61613"
+  IDDS_RECEIVER_DESTINATION: "/queue/panda_idds"
+  IDDS_RECEIVER_USERNAME: "idds"
+  IDDS_RECEIVER_PASSWORD: "{{.Values.msgsvc.basePasswd}}_idds"
+
   IDDS_SERVER: "https://{{ include "idds_ref" . }}:{{ .Values.idds.restPort  }}"
 
   {{ include "set_proxy" . | indent 2 }}
